live-deployment-claimassist-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "25"
    meta.helm.sh/release-name: claimassist-dev
    meta.helm.sh/release-namespace: claimassist-dev
  creationTimestamp: "2026-08-27T11:57:19Z"
  generation: 31
  labels:
    app.kubernetes.io/component: api-gateway
    app.kubernetes.io/instance: claimassist-dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: claimassist
    app.kubernetes.io/part-of: claimassist
    app.kubernetes.io/version: 1.0.0
    environment: dev
  name: claimassist-api-gateway
  namespace: claimassist-dev
  resourceVersion: "1221476"
  uid: ea1ab34a-a3f1-475d-af36-9bd0bb34f8cf
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: api-gateway
      app.kubernetes.io/instance: claimassist-dev
      app.kubernetes.io/name: claimassist
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-09-04T02:24:50+05:30"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/component: api-gateway
        app.kubernetes.io/instance: claimassist-dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: claimassist
        app.kubernetes.io/part-of: claimassist
        app.kubernetes.io/version: 1.0.0
        environment: dev
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: api-gateway
                  app.kubernetes.io/instance: claimassist-dev
                  app.kubernetes.io/name: claimassist
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: k8s
        - name: SPRING_CONFIG_IMPORT
        - name: SPRING_CLOUD_CONFIG_ENABLED
          value: "false"
        - name: SPRING_EUREKA_CLIENT_ENABLED
          value: "false"
        - name: SPRING_CLOUD_DISCOVERY_ENABLED
          value: "false"
        - name: ZIPKIN_ENDPOINT
          value: http://zipkin-service.claimassist-observability.svc.cluster.local:9411/api/v2/spans
        - name: SPRING_AUTOCONFIGURE_EXCLUDE
          value: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
        - name: SPRING_CONFIG_ADDITIONAL_LOCATION
          value: file:/etc/claimassist/config/
        - name: APP_SECURITY_PUBLIC_ROUTES_0
          value: /actuator/health
        - name: APP_SECURITY_PUBLIC_ROUTES_1
          value: /actuator/health/**
        - name: APP_SECURITY_PUBLIC_ROUTES_2
          value: /actuator/info
        - name: APP_SECURITY_PUBLIC_ROUTES_3
          value: /actuator/prometheus
        - name: APP_SECURITY_PUBLIC_ROUTES_4
          value: /customer/auth/**
        - name: SPRING_DATA_REDIS_HOST
          value: claimassist-redis
        - name: SPRING_DATA_REDIS_PORT
          value: "6379"
        - name: KEYCLOAK_ISSUER_URI
          value: http://100.114.133.69:30080/realms/claimassist-dev
        - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI
          value: http://100.114.133.69:30080/realms/claimassist-dev/protocol/openid-connect/certs
        image: claimassistdev/api-gateway:6844af0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health/liveness
            port: 8080
            scheme: HTTP
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 3
        name: api-gateway
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /actuator/health/readiness
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 192Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /actuator/health/liveness
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/claimassist/config
          name: config
          readOnly: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: claimassist-registry-credentials
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      serviceAccount: api-gateway-sa
      serviceAccountName: api-gateway-sa
      terminationGracePeriodSeconds: 60
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app.kubernetes.io/component: api-gateway
            app.kubernetes.io/instance: claimassist-dev
            app.kubernetes.io/name: claimassist
        maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
      volumes:
      - configMap:
          defaultMode: 420
          name: claimassist-api-gateway-config
        name: config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-09-03T21:01:15Z"
    lastUpdateTime: "2026-09-03T21:01:15Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-09-02T22:38:10Z"
    lastUpdateTime: "2026-09-03T21:31:20Z"
    message: ReplicaSet "claimassist-api-gateway-644db59b76" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 31
  readyReplicas: 1
  replicas: 1
  terminatingReplicas: 0
  updatedReplicas: 1
